feat: add public trust profiles
